adding templates and apache conf for mod_wsgi

--- a/apache/excerpts.conf
+++ b/apache/excerpts.conf
@@ -1,8 +1,10 @@
+RedirectMatch 301 /excerpts$ /excerpts/
+Alias /excerpts/public /opt/Excerpts/excerpts/public
 WSGIDaemonProcess excerpts user=www-data group=www-data threads=5
 WSGIProcessGroup excerpts
 WSGIScriptAlias /excerpts /opt/Excerpts/apache/excerpts.wsgi
+WSGIPassAuthorization On
 <Directory "/opt/Excerpts">
     Options FollowSymLinks
-    AllowOverride FileInfo
     Require all granted
 </Directory>
